src-tauri/cargo_check_errors_2_utf8.txt
cargo :     Checking wry v0.53.5
所在位置 行:1 字符: 1
+ cargo check 2> cargo_check_errors_2.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking wry v0.5 
   3.5:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    Checking tower v0.5.3
    Checking hyper-util v0.1.19
    Checking tauri-runtime v2.9.2
    Checking tower-http v0.6.8
    Checking tauri-runtime-wry v2.9.3
    Checking hyper-rustls v0.27.7
    Checking reqwest v0.13.1
    Checking tauri v2.9.5
    Checking tauri-plugin-fs v2.4.5
    Checking tauri-plugin-opener v2.5.3
    Checking tauri-plugin-global-shortcut v2.3.1
    Checking tauri-plugin-dialog v2.6.0
    Checking d2r-rust v0.1.0 (F:\mycode\D2Rmutiplay\d2r-rust\src-ta
uri)
error[E0432]: unresolved import `scap`
 --> src\modules\ai.rs:1:5
  |
1 | use scap;
  |     ^^^^ no external crate `scap`

error[E0599]: no method named `emit` found for struct `AppHandle<R>
` in the current scope
   --> src\modules\ai.rs:144:24
    |
144 |     let _ = app_handle.emit("ai-preview", base64_region.clone
());
    |                        ^^^^
    |
   ::: C:\Users\yoyos\.cargo\registry\src\index.crates.io-1949cf8c6
b5b557f\tauri-2.9.5\src\lib.rs:952:6
    |
952 |   fn emit<S: Serialize + Clone>(&self, event: &str, payload: 
S) -> Result<()> {
    |      ---- the method is available for `AppHandle` here
    |
    = help: items from traits can only be used if the trait is in s
cope
help: there is a method `exit` with a similar name, but with differ
ent arguments
   --> C:\Users\yoyos\.cargo\registry\src\index.crates.io-1949cf8c6
b5b557f\tauri-2.9.5\src\app.rs:534:3
    |
534 |   pub fn exit(&self, exit_code: i32) {
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: trait `Emitter` which provides `emit` is implemented but not 
in scope; perhaps you want to import it
    |
  1 + use tauri::Emitter;
    |

error[E0308]: `match` arms have incompatible types
   --> src\modules\ai.rs:158:14
    |
154 |       let final_prompt = match prompt_group.as_deref() {
    |                          ----------------------------- `match
` arms have incompatible types
155 |           Some("CN_DETAILED") => "璇风敤涓枃璇︾粏鍒嗘瀽鍥句腑鏆楅粦2閲嶅埗鐗堣澶囷
紝浣撶幇绋€鏈夊害锛圧arity锛変笌闇€姹傞噺锛圖emand锛変袱涓淮搴︺€備笉鍋氭渶缁堜环鍊艰瘎浼帮紝浠呮彁渚涘瑙傚睘鎬у垎鏋
愩€?,
    |                                  ----------------------------
-------------------------------------------------------------------
------------------------------ this is found to be of type `&str`
156 |           Some("EN_TECHNICAL") => "Analyze the Diablo II equi
pment in technical English. Focus on rarity and demand. Objective a
nalysis only.",
    |                                   ---------------------------
-------------------------------------------------------------------
-------------- this is found to be of type `&str`
157 |           Some("CN_SUMMARY") => "璇风畝鐭湴鐢ㄤ腑鏂囨€荤粨鍥句腑瑁呭鐨勪环鍊兼綔鍔涖
€?,
    |                                 -----------------------------
----------- this is found to be of type `&str`
158 |           _ => if let Some(custom) = ai_cfg.map(|c| c.prompt.
clone()).filter(|s| !s.is_empty()) {
    |  ______________^
159 | |             custom
160 | |         } else {
161 | |             "璇峰瑙傚垎鏋愬浘涓殫榛?閲嶅埗鐗堣澶囷紝浣撶幇绋€鏈夊害锛圧arity锛変笌闇€姹傞噺
锛圖emand锛変袱涓淮搴︺€備笉鍋氭渶缁堜环鍊艰瘎浼帮紝浠呮彁渚涘瑙傚睘鎬у垎鏋愩€?.to_string()
162 | |         },
    | |_________^ expected `&str`, found `String`
    |
help: consider borrowing here
    |
159 ~             &custom
160 |         } else {
161 ~             &"璇峰瑙傚垎鏋愬浘涓殫榛?閲嶅埗鐗堣澶囷紝浣撶幇绋€鏈夊害锛圧arity锛変笌闇€姹傞噺锛
圖emand锛変袱涓淮搴︺€備笉鍋氭渶缁堜环鍊艰瘎浼帮紝浠呮彁渚涘瑙傚睘鎬у垎鏋愩€?.to_string()
    |

warning: unused variable: `handle`
   --> src\lib.rs:110:9
    |
110 |     let handle = app.app_handle().clone();
    |         ^^^^^^ help: if this is intentional, prefix it with a
n underscore: `_handle`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`)
 on by default

Some errors have detailed explanations: E0308, E0432, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `d2r-rust` (lib) generated 1 warning
error: could not compile `d2r-rust` (lib) due to 3 previous errors;
 1 warning emitted
